--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
                     <option>14</option>
                     <option>15</option>
                     <option>16</option>
+                    <option>17</option>
+                    <option>18</option>
+                    <option>19</option>
+                    <option>20</option>
+                    <option>21</option>
+                    <option>22</option>
+                    <option>23</option>
+                    <option>24</option>
                 </select>
             </div>
             <div class="listCheckbox">
