--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <button type="button" id="copyButton">Copy</button>
         </div>
     </div>
-    <!-- Form begin -->
+    <!-- Form -->
     <div>
 		<form id="optForm">
 			<h3>Customize your password</h3>
@@ -93,21 +93,18 @@
             </div>
         </form>
     </div>
-    <!-- Form end -->
 
-    <!-- Generate button begin -->
+    <!-- Generate button -->
     <div>
         <button type="button" id="genButton">Generate</button>
     </div>
-    <!-- Generate button end -->
 	
     <!-- Show passwords cronology button -->
     <div>
         <button type="button" id="cronologyButton">Show Cronology</button>
     </div>
-    <!-- Show passwords cronology button end -->
 
-	<!-- JavaScript files -->
+    <!-- JavaScript files -->
     <script src="script.js"></script>
     <script src="events.js"></script>
   </body>
