--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
         <button type="button" id="genButton">Generate</button>
     </div>
 	
-    <!-- Show passwords cronology button -->
+    <!-- Show passwords history button -->
     <div>
-        <button type="button" id="cronologyButton">Show Cronology</button>
+        <button type="button" id="historyButton">History</button>
     </div>
 
     <!-- JavaScript files -->
