--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>Secure Password Generator</title>        
+    <title>Password Generator</title>        
   </head>
   <body>
 	<div>
@@ -20,6 +20,7 @@
             <button type="button" id="copyButton">Copy</button>
         </div>
     </div>
+	  
     <!-- Form -->
     <div>
 		<form id="optForm">
@@ -28,7 +29,7 @@
                 <label for="setLength">Password length</label>
                 <br>
                 <select id="setLength">
-			<option>8</option>
+						<option>8</option>
                         <option>9</option>
                         <option>10</option>
                         <option>11</option>
@@ -45,7 +46,7 @@
                         <option>22</option>
                         <option>23</option>
                         <option>24</option>
-		        <option>25</option>
+		        		<option>25</option>
                         <option>26</option>
                         <option>27</option>
                         <option>28</option>
@@ -53,24 +54,6 @@
                         <option>30</option>
                         <option>31</option>
                         <option>32</option>
-                        <option>33</option>
-                        <option>34</option>
-                        <option>35</option>
-                        <option>36</option>
-                        <option>37</option>
-                        <option>38</option>
-                        <option>39</option>
-                        <option>40</option>
-                        <option>41</option>
-                        <option>42</option>
-                        <option>43</option>
-                        <option>44</option>
-                        <option>45</option>
-                        <option>46</option>
-                        <option>47</option>
-                        <option>48</option>
-                        <option>49</option>
-                        <option>50</option>
                 </select>
             </div>
             <div class="listCheckbox">
