--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-/*  A simple password generator, written in JavaScript.
+<!--  A simple password generator, written in JavaScript.
     Copyright (C) 2021  MattyDev2314
 
     This program is free software: you can redistribute it and/or modify
@@ -14,7 +14,7 @@
 
     You should have received a copy of the GNU Affero General Public License
     along with this program.  If not, see <https://www.gnu.org/licenses/>.
-*/
+-->
 
 <!doctype html>
 <html lang="en">
