--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
                 <label for="setLength">Password length</label>
                 <br>
                 <select id="setLength">
-			<option>8</option>
-                        <option>9</option>
-                        <option>10</option>
-                        <option>11</option>
-                        <option>12</option>
-                        <option>13</option>
-                        <option>14</option>
-                        <option>15</option>
-                        <option>16</option>
-                        <!-- If you want you can add more length options obviusly -->
+		    <option>8</option>
+                    <option>9</option>
+                    <option>10</option>
+                    <option>11</option>
+                    <option>12</option>
+                    <option>13</option>
+                    <option>14</option>
+                    <option>15</option>
+                    <option>16</option>
+                    <!-- If you want you can add more option tags obviusly -->
                 </select>
             </div>
             <div class="listCheckbox">
